<resources>
    <string name="app_name">COREApp</string>
    <string name="welcome_text">CORE</string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>

    <string name="title_activity_connections_home">ConnectionsHomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="discussion_topics">Discussion Topics</string>
    <string name="discussions">DISCUSSIONS</string>
    <string name="select">Select</string>
    <string name="connections_label">CONNECTIONS</string>
    <string name="orientation_label">ORIENTATION</string>
    <string name="resources_label">RESOURCES</string>
    <string name="expectations_string">EXPECTATIONS</string>
    <string name="back_button_label">BACK</string>
    <string name="inbox_button_label">INBOX</string>
    <string name="announcements_button_label">ANNOUNCEMENTS</string>
    <string name="calendar_button_label">CALENDAR</string>
    <string name="search_button_label">SREARCH</string>
    <string name="add_label">ADD</string>
    <string name="welcome_week_label">WELCOME WEEK</string>
    <string name="fall_and_winter_term_label"><![CDATA[FALL & WINTER]]></string>
    <string name="spring_term_label">SPRING TERM</string>
    <string name="core_login_label">C.O.R.E.</string>
    <string name="password_label">PASSWORD</string>
    <string name="share_label">SHARE</string>
    <string name="student_orgs_label">STUDENT ORGS</string>
    <string name="confirm_password_label">Confirm Password:</string>
</resources>
