<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.lawrence.elijahcauley.coreapp.HomeScreenActivity"
   android:background="#a1e183"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="#2a7698"
        android:layout_weight="0.06">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/inboxButton"
            android:background="#215368"
            android:layout_marginLeft="225dp"
            android:textColor="#ffffff"
            android:text="@string/inbox_button_label"
            android:textStyle="bold|italic"
            android:layout_gravity="center|left" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/announcementsButton"
            android:background="#215368"
            android:textColor="#ffffff"
            android:text="@string/announcements_button_label"
            android:textSize="10dp"
            android:textStyle="bold|italic"
            android:padding="0dp"
            android:layout_gravity="right"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <Button
        android:layout_width="350dp"
        android:layout_height="84dp"
        android:id="@+id/connectionsButton"
        android:clickable="true"
        android:onClick="goToConnectionsHome"
        android:allowUndo="true"
        android:text="@string/connections_label"
        android:textSize="45dp"
        android:background="#8fd4f3"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="350dp"
        android:layout_height="78dp"
        android:id="@+id/orientationButton"
        android:layout_weight=".2"
        android:clickable="true"
        android:onClick="goToOrientation"
        android:allowUndo="true"
        android:text="@string/orientation_label"
        android:textSize="50dp"
        android:background="#8fd4f3"
        android:layout_marginBottom="40dp"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="350dp"
        android:layout_height="74dp"
        android:id="@+id/resourcesButton"
        android:background="#8fd4f3"
        android:clickable="true"
        android:onClick="goToResources"
        android:text="@string/resources_label"
        android:textSize="50dp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_weight=".2" />

    <Button
        android:layout_width="350dp"
        android:layout_height="79dp"
        android:id="@+id/expectationsButton"
        android:background="#8fd4f3"
        android:clickable="true"
        android:onClick="goToExpectations"
        android:text="@string/expectations_string"
        android:textSize="45dp"
        android:textStyle="bold|italic"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_marginBottom="30dp"
        android:layout_weight=".2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#2a7698"
        android:layout_weight="3.28"></LinearLayout>

</LinearLayout>
