<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.lawrence.elijahcauley.coreapp.ConnectionsDiscussionSelectActivity"
    android:background="#bdf4c0">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:id="@+id/button"
        android:background="#215368"
        android:clickable="true"
        android:layout_gravity="left"
        android:text="@string/back_button_label"
        android:textColor="#e6fcfe" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discussions"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="447dp"
        android:id="@+id/discussionList"
        android:layout_gravity="center_horizontal"
        android:background="#c4e9f5"
        android:choiceMode="singleChoice"
        android:listSelector="#ffec41" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
