<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.lawrence.elijahcauley.coreapp.ConnectionsHomeActivity"
    android:background="#a1e183"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_gravity="center_horizontal"
        android:background="#2a7698"
        android:layout_weight="0.33"
        android:text="@string/connections_label"
        android:textColor="#ffffff"
        android:textSize="45dp"
        android:textStyle="bold|italic"
        android:id="@+id/connectionsLabel"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:touchscreenBlocksFocus="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discussion_topics"
            android:id="@+id/discussionTopicLabel"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:layout_marginLeft="60dp"
            android:textStyle="bold|italic" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="27dp"
            android:layout_height="match_parent"
            android:id="@+id/addTopicLabel"
            android:background="#7aae61"
            android:layout_marginLeft="60dp"
            android:textColor="#e6fcfe"
            android:text="@string/add_label"
            android:textSize="10dp"
            android:elegantTextHeight="true" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="415dp"
        android:id="@+id/discussionTopicsList"
        android:background="#c0e6e6"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:listSelector="#ffe207"
        android:layout_weight="0.84" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:id="@+id/selectButton"
            android:clickable="true"
            android:background="#7aae61"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold|italic" />
    </LinearLayout>

</LinearLayout>
