<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#a1e183"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context="edu.lawrence.elijahcauley.coreapp.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/user_name_label"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/password_label"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:linksClickable="false"
        android:longClickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_label"
        android:id="@+id/confirm_password_label"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:linksClickable="false"
        android:longClickable="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/submit_user"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:background="#59baee" />
</LinearLayout>
